# pyscaff

./: .env.example  .gitignore  .pytest-setup-complete.txt  2025-10-02-caveat-the-messages-below-were-generated-by-the-u.txt  CLAUDE.md  Makefile  README.md  SESSION-HANDOFF.md  alembic.ini  docker-compose.yml  feature-breakdown-product-friendly.md  feature-breakdown.md  pyproject.toml  pyscaff-exploration.md  pyscaff-prd.md  test_workflow.json
.ai/: BRIEFING.md
.claude/: settings.local.json
.claude/commands/: gatekeeper.md  housekeeping.md  start-session.md  startup.md  verify-prd.md
.claude/scripts/: gatekeeper.sh  housekeeping.sh  startup.sh
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/agent/: __init__.py  base.py  litellm_provider.py  mock.py
app/db/: base.py  models.py  session.py
app/engine/: __init__.py  orchestrator.py
app/executors/: __init__.py  ai_generate.py  approval.py  conditional.py  form.py
app/models/: __init__.py  schemas.py
app/observability/: __init__.py
app/routers/: ai.py  executions.py  state.py  workflows.py
docs/: frontend-spec.md
docs/adr/: ADR-007-frontend-architecture.md
docs/security/: pip-25.2-false-positive.md
frontend/: package-lock.json  package.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  mock-provider.tsx  page.tsx
frontend/components/: empty-state.tsx  header.tsx  sidebar.tsx  theme-toggle.tsx  workflow-card.tsx  workflow-list-skeleton.tsx  workflow-preview.tsx  yaml-editor.tsx
frontend/lib/: api-client.ts  mock-data.ts  types.ts
tests/: README.txt  __init__.py  conftest.py
(+52 files in other folders)
